# file-pipe

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.multi  README.md
src/: error.rs  handler.rs  io.rs  lib.rs  main.rs  server.rs  state.rs
tests/: integration.rs
