[package]
name = "file-pipe"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
multer = "3.1.0"
dashmap = "6.1.0"

[dev-dependencies]
reqwest = { version = "0.13", features = ["stream", "multipart"] }
futures = "0.3"
